@@ -9,6 +9,7 @@ Feature:
 
 * promotion video http://www.youtube.com/watch?v=_swiyXcUvNY
 * bootstraping sample blocks and document to easily custom blocks.
+* from blockly) Move include section always at top of the source file
 
 Change:
 
